fixup! RMX2020: Build power-service.RMX2020-libperfmgr
Signed-off-by: Sarthak Roy <sarthakroy2002@gmail.com>
Change-Id: Ic9b221a14e978143947a88424c1165d4fc4536ad

--- a/rootdir/etc/init.mt6768.rc
+++ b/rootdir/etc/init.mt6768.rc
@@ -910,7 +910,7 @@ on property:sys.boot_completed=1
 
 # initialize powerHAL when boot is completed
 on property:sys.boot_completed=1
-    setprop vendor.mediatek.powerhal.init 1
+    setprop vendor.powerhal.init 1
 
 # Battery info
 on property:persist.vendor.mediatek.fg.disable=1
