--- a/hidl/usb/android.hardware.usb@1.0-service.RMX2020.rc
+++ b/hidl/usb/android.hardware.usb@1.0-service.RMX2020.rc
@@ -1,4 +1,5 @@
 service vendor.usb-hal-1-0 /vendor/bin/hw/android.hardware.usb@1.0-service.RMX2020
+    interface android.hardware.usb@1.0::IUsb default
     class hal
     user system
     group system
